--- a/machinelearning.html
+++ b/machinelearning.html
@@ -202,9 +202,23 @@ Joy Buolamwimi<em>, Unmasking AI: My Mission to Protect What is Human in a World
 <p><em><a href="https://arxiv.org/pdf/1804.03209">Speech Commands: A Dataset for Limited-Vocabulary Speech Recognition</a> </em>is the paper by Peter Warden from Google Brain explaining the creation process for Speech Command Recognizer. In it, he exposes that Speech Command Recognizer has many of the same bias issues found in the StoneLock facial recognition technology.&nbsp; This technology, designed specifically to identify the voice of a primary user and respond accordingly, is built upon an initial data training set that was largely contributed to by anonymous volunteers and some paid contributors.&nbsp; He intentionally did not collect information about the race, age, gender, or ethnicity of the participants.&nbsp; While he admits that he focused primarily on American English speakers, he made no effort to ensure a mix of native and non-native speakers, nor was there any mention of efforts to include speakers of various regional accents of the English language or those whose speech is impaired for any number of reasons. Volunteers were collected primarily through social media, and the social media networks of Mr. Warden are likely highly representative of the tech field at large, i.e. primarily white and some Asian men residing in Silicon Valley or other tech and research hubs.</p>
 <p>This is color-deafness.&nbsp; The lack of efforts toward inclusion means that if this technology works successfully for the privileged classes, Google will claim it to be successful, even if it fails when used by a large percentage of folks who don&rsquo;t fit into the demographic boxes of the privileged classes. As we don&rsquo;t yet know how the Teachable Machine will be implemented, we don&rsquo;t know how disastrous its malperformance for marginalized groups could be.</p>
 <p>Dr. Buolamwimi sights yet another example in this chapter that should be a warning here. Canadian firm Winterlight Labs created a system that used machine learning to attempt to detect indications of Alzheimer&rsquo;s disease using voice recordings. The system was built using a dataset comprised primarily the voices of anglophone Canadians. But when francophone Canadians tried to use the system, they did not match the training data, and the system failed to match correctly.&nbsp; Using the Teachable Machine for musical applications led me to see one of the possible limitations it has.&nbsp; Dr. Buolamwimi&rsquo;s research has pointed out how these shortcomings of inclusion can prove disastrous for underprivileged people.&nbsp; Now is the time to expose the coded gaze in all of our work with AI, even if on the surface it does not seem connected.</p>
-        <h1>Our Teachable Machine</h1>
-        <h2>Our Trained Audio Model</h2>
-        <p>Our audio model identifies pitch! Please allow our webpage to have microphone permissions to see the model in action.</p>
- 		<iframe src="https://editor.p5js.org/dmoore33/full/e3nrNMG7A"></iframe>
+     <h1>Our Project</h1>
+        <p>
+            <a href="ourmodel.html">Click Here For Our Trained Model</a>
+        </p>
+        <p>
+            <a href="https://github.com/egbecker/lis-500/blob/main/index.html">Click Here For Our Code</a>
+        </p>
+        <p>
+            <a href="https://teachablemachine.withgoogle.com/">Click Here to Access Teachable Machines</a>
+        </p>
+        <footer>
+            <p>
+                <!-- IP info below -->
+                Copyright Liz Becker and David Moore 2024<br />
+                <a href="mailto:egbecker@wisc.edu" class="cornsilk">egbecker@wisc.edu</a>
+                <a href="mailto:dmoore33@wisc.edu" class="cornsilk">dmoore33@wisc.edu</a>
+            </p>
+        </footer>
     </body>
 </html>
