--- a/machinelearning.html
+++ b/machinelearning.html
@@ -207,5 +207,5 @@ Joy Buolamwimi<em>, Unmasking AI: My Mission to Protect What is Human in a World
         <h1>Our Teachable Machine</h1>
         <h2>Our Trained Audio Model</h2>
         <p>Our audio model identifies pitch! Please allow our webpage to have microphone permissions to see the model in action.</p>
- 		<iframe src="https://editor.p5js.org/dmoore33/full/vs-8c6vZC"></iframe>
+ 		<iframe src="https://editor.p5js.org/dmoore33/full/vs-8c6vZC" width="600px" height="400px"></iframe>
 </html>
