--- a/machinelearning.html
+++ b/machinelearning.html
@@ -208,4 +208,19 @@ Joy Buolamwimi<em>, Unmasking AI: My Mission to Protect What is Human in a World
         <h2>Our Trained Audio Model</h2>
         <p>Our audio model identifies pitch! Please allow our webpage to have microphone permissions to see the model in action.</p>
  		<iframe src="https://editor.p5js.org/dmoore33/full/vs-8c6vZC" width="600px" height="400px"></iframe>
+	<p>
+		<a href="https://github.com/egbecker/lis-500/blob/main/index.html">Click Here For Our Code</a>
+	</p>
+	 <p>
+            <a href="https://teachablemachine.withgoogle.com/">Click Here to Access Teachable Machines</a>
+        </p>
+	    <footer>
+            <p>
+                <!-- IP info below -->
+                Copyright Liz Becker and David Moore 2024<br />
+                <a href="mailto:egbecker@wisc.edu" class="cornsilk">egbecker@wisc.edu</a>
+                <a href="mailto:dmoore33@wisc.edu" class="cornsilk">dmoore33@wisc.edu</a>
+            </p>
+        </footer>
+    </body>
 </html>
